[gd_scene load_steps=2 format=3 uid="uid://bxs6r1amg4hbd"]

[ext_resource type="Script" path="res://scripts/double_piece.gd" id="1_dquy2"]

[node name="DoublePiece" type="Node2D"]
position = Vector2(32, 32)
script = ExtResource("1_dquy2")

[node name="NodePrimary" type="Node2D" parent="."]

[node name="Up" type="RayCast2D" parent="NodePrimary"]
target_position = Vector2(0, -64)
collide_with_areas = true
collide_with_bodies = false

[node name="Left" type="RayCast2D" parent="NodePrimary"]
target_position = Vector2(-64, 0)
collide_with_areas = true
collide_with_bodies = false

[node name="Right" type="RayCast2D" parent="NodePrimary"]
target_position = Vector2(64, 0)
collide_with_areas = true
collide_with_bodies = false

[node name="Down" type="RayCast2D" parent="NodePrimary"]
target_position = Vector2(0, 64)
collide_with_areas = true
collide_with_bodies = false

[node name="RotationContainer" type="Node2D" parent="."]

[node name="NodeSecondary" type="Node2D" parent="RotationContainer"]
position = Vector2(64, 0)

[node name="Up" type="RayCast2D" parent="RotationContainer/NodeSecondary"]
target_position = Vector2(0, -64)
collide_with_areas = true
collide_with_bodies = false

[node name="Left" type="RayCast2D" parent="RotationContainer/NodeSecondary"]
target_position = Vector2(-64, 0)
collide_with_areas = true
collide_with_bodies = false

[node name="Right" type="RayCast2D" parent="RotationContainer/NodeSecondary"]
target_position = Vector2(64, 0)
collide_with_areas = true
collide_with_bodies = false

[node name="Down" type="RayCast2D" parent="RotationContainer/NodeSecondary"]
target_position = Vector2(0, 64)
collide_with_areas = true
collide_with_bodies = false
